2011-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Auto-placement of the left margin of the plot
	was failing to allow room for "set key outside left".

2011-03-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(get_data) src/graphics.c(plot_boxes):
	variable color for plot style BOXXYERROR

2011-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL:	
	Tag for release of version 4.4.3

2011-02-20  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Revised configuration tests for lua support.

2011-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_calln): Limit recursion depth for multi-variable
	functions in the same manner as for single-variable functions.
	Bug #3184671

2011-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm: Add missing TERM_ALPHA_CHANNEL flag for pdfcairo

2011-02-10  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm (WIN_set_font) src/win/wgraph.c (GraphChangeFont):
	Do not initialize to an empty font name.
	Bugfix

2011-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_set_color): Initialize rgb_color for the case TC_LT.
	term/lua/gnuplot-tikz.lua: Work around failure to handle LT_NODRAW
	and LT_BACKGROUND. This prevents a freeze, but is not a complete fix.
	Bugfix

	* src/save.c (save_linetype): save/show variable linecolor correctly.

2011-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_filled_polygon): Explicitly set a zero-width
	same-color border for filled polygons, otherwise it inherits a border
	line style.
	Bug #3165902

2011-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* set/set.c (set_decimalsign):  Possible fix for problem with
	numeric locales on Windows.  Bug #3120819.

2011-01-22  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Fix typo in previous definition of _WIN32_WINNT.

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>
